<resources>
    <string name="app_name" translatable="false">PROJETO</string>
    <string name="Edit" translatable="false">Edit</string>
    <string name="Remove" translatable="false">Remove</string>
    <string name="Insert" translatable="false">Insert</string>
    <string name="Options" translatable="false">Options</string>
    <string name="View_Monday" translatable="false">View Monday</string>
    <string name="View_Thursday" translatable="false">View Thursday</string>
    <string name="View_Wednesday" translatable="false">View Wednesday</string>
    <string name="View_Tuesday" translatable="false">View Tuesday</string>
    <string name="View_Friday" translatable="false">View Friday</string>
    <string name="View_Saturday" translatable="false">View Saturday</string>
    <string name="View_Sunday" translatable="false">View Sunday</string>
    <string name="Remove_Monday" translatable="false">Remove Monday</string>
    <string name="Remove_Thursday" translatable="false">Remove Thursday</string>
    <string name="Remove_Wednesday" translatable="false">Remove Wednesday</string>
    <string name="Remove_Tuesday" translatable="false">Remove Tuesday</string>
    <string name="Remove_Friday" translatable="false">Remove Friday</string>
    <string name="Remove_Saturday" translatable="false">Remove Saturday</string>
    <string name="Remove_Sunday" translatable="false">Remove Sunday</string>
    <string name="Title" translatable="false">Title</string>
    <string name="Note" translatable="false">Note</string>
    <string name="Date" translatable="false">Date</string>
    <string name="View_All" translatable="false">View All</string>
    <string name="Remove_All" translatable="false">Remove All</string>
    <string name="Notebook" translatable="false">Notebook</string>
    <string name="Add_Marker" translatable="false">Add Marker</string>
    <string name="addnow" translatable="false">Add Now</string>
    <string name="problemDescription" translatable="false">Problem Description</string>
    <string name="name" translatable="false">"Name: "</string>
    <string name="enter" translatable="false">Enter</string>
    <string name="namelogin" translatable="false">Name</string>
    <string name="removebyid" translatable="false">Remove by ID</string>
    <string name="removenow" translatable="false">Remove Now</string>
    <string name="insertproblemid" translatable="false">Insert problem ID</string>


</resources>