<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/file"
        android:title="@string/Options"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/remove"
                android:title="@string/Remove"
                />
            <item android:id="@+id/edit"
                android:title="@string/Edit"/>
            <item android:id="@+id/remove_all"
                android:title="@string/Remove_all"/>
            <item android:id="@+id/View_Monday"
                android:title="@string/View_Monday"/>
            <item android:id="@+id/View_Thursday"
                android:title="@string/View_Thursday"/>
            <item android:id="@+id/View_Wednesday"
                android:title="@string/View_Wednesday"/>
            <item android:id="@+id/View_Tuesday"
                android:title="@string/View_Tuesday"/>
            <item android:id="@+id/View_Friday"
                android:title="@string/View_Friday"/>
            <item android:id="@+id/View_Saturday"
                android:title="@string/View_Saturday"/>
            <item android:id="@+id/View_Sunday"
                android:title="@string/View_Sunday"/>
        </menu>
    </item>


</menu>