<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unnamed">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Add_Marker"
        android:textColor="@color/black"
        android:textSize="50dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/iduser"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fontFamily="sans-serif-light"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/green"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/lat"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:backgroundTint="@color/green"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:textSize="18sp"

        />

    <EditText
        android:id="@+id/lng"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:backgroundTint="@color/green"
        android:fontFamily="sans-serif-light"
        android:inputType="textAutoComplete"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/descr"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fontFamily="sans-serif-light"
        android:hint="@string/problemDescription"
        android:inputType="textAutoComplete"
        android:backgroundTint="@color/green"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/lime"
        android:onClick="addMarker"
        android:text="@string/addnow"
        android:textColor="@color/black" />

</LinearLayout>